--- a/info2180-project1-starter-master/index.html
+++ b/info2180-project1-starter-master/index.html
@@ -26,7 +26,7 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="#" alt="">
+                    <img src="image1.jpg" alt="image1">
                 </div>
                 <div class="overview-hero-text">
                     <h2>Live  your healthiest life now!</h2>
